--- a/signup.html
+++ b/signup.html
@@ -22,10 +22,10 @@
 					<h1 id="logo"><a href="index.html">Home</a></h1>
 					<nav id="nav">
 						<ul>
-<!--                            <li class="current"><a href="index.html">Home</a></li>-->
-							<li><a href="#">About</a></li>
-                            <li><a href="#">Sign up</a></li>
-							<li><a href="#">Schedule</a></li>
+							<li><a href="http://tac.jessicahu.me/about">About</a></li>
+                            <li class="current"><a href="http://tac.jessicahu.me/signup">Sign up</a></li>
+							<li><a href="http://tac.jessicahu.me/schedule">Schedule</a></li>
+                            <li><a href="http://tac.jessicahu.me/officers">Officers</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -44,8 +44,8 @@
 						<header>
 							<h2>TENNIS AT CAL</h2>
 						</header>
-						<p><strong>Practice</strong>:
-						<br />
+                            <p><strong>Practices</strong> at <strong>Hearst Courts</strong>:
+                        <br />
                             <strong>Mon/Wed</strong> 7:30-9:30pm
 						<br />
                             <strong>Sat</strong> 2:30-4:30pm
@@ -71,7 +71,7 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="#" class="button special">facebook page</a></li>
+							<li><a href="https://www.facebook.com/groups/107239992697514/" class="button special">facebook page</a></li>
 							<li><a href="#" class="button">mailing list</a></li>
 						</ul>
 					</footer>
