condense the pages

--- a/about.html
+++ b/about.html
@@ -23,8 +23,6 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="http://tac.jessicahu.me/about">About</a></li>
-                            <li><a href="http://tac.jessicahu.me/signup">Sign up</a></li>
-							<li><a href="http://tac.jessicahu.me/schedule">Schedule</a></li>
                             <li><a href="http://tac.jessicahu.me/officers">Officers</a></li>
 						</ul>
 					</nav>
@@ -50,9 +48,7 @@
 			<!-- Main -->
 				<article id="main">
 					<section class="special container">
-                        <image class="icon featured" src="images/tennis_ball.png" style="height:70px; width:70px; margin:auto"></image>
-                                        <br>
-						<h2>Recreational tennis for all skill levels</h2>
+                        <h2>Recreational tennis for all skill levels</h2>
 						<p>Founded in 2003, <strong>Tennis at Cal</strong> is a recreational tennis club on campus available to tennis 
 						<br />
                         players of all skill levels. There are no tryouts and anyone can join. So whether you're a seasoned
@@ -99,6 +95,14 @@
 								</div>
 							</div>
 						</section>
+                    
+                    <hr>
+                    
+                    <section class="container">
+                        <br>
+						<h2><strong>Membership</strong></h2>
+						<p>Membership is <strong>$10/semester</strong>. Click <a href="https://goo.gl/forms/DmQqeBOBLkoRiq5U2" target="_blank">this link</a> to fill out our online membership form, and flag down any of our officers at practice to pay either by Venmo or cash. The first week of practices each semester is open to everyone, so feel free to come check us out!</p>
+                    </section>
 				</article>
 
 			<!-- CTA -->
@@ -110,7 +114,7 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="https://www.facebook.com/groups/107239992697514/" class="button special">facebook page</a></li>
+							<li><a href="https://www.facebook.com/groups/107239992697514/" class="button special" target="_blank">facebook page</a></li>
 							<li><a href="#" class="button">mailing list</a></li>
 						</ul>
 					</footer>
