--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 			<!-- Main -->
 				<article id="main">
 
-					<header class="container" style='text-align:center'>
+					<section class="container">
+                        <image class="icon featured" src="images/tennis_ball.png" style="height:70px; width:70px; margin:auto"></image>
+                        <br>
 						<h2>Welcome to the homepage for Tennis at Cal.</h2>
 						<p>
                             Here, you'll find information regarding the <strong>practices</strong>, <strong>socials</strong>, and <strong>tournaments</strong> that we host year-round. To learn more about our practice schedule and tournaments, check the <a>About</a> page.
@@ -64,7 +66,15 @@
                         <p>
                             For the most up-to-date announcements, follow us on <a>Facebook</a>. Hope to see you on the courts!
                         </p>
-                    </header>
+                    </section>
+                    <br>
+                    <hr>
+                    <br>
+                    <section class="container">
+                        <br>
+						<h2><strong>Schedule</strong></h2>
+						<p>Check back later for an updated calendar of practices, tournaments, and socials.</p>
+                    </section>
             </article>
 
 
@@ -77,7 +87,7 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="https://www.facebook.com/groups/107239992697514/" class="button special">facebook page</a></li>
+							<li><a href="https://www.facebook.com/groups/107239992697514/" class="button special" target="_blank">facebook page</a></li>
 							<li><a href="#" class="button">mailing list</a></li>
 						</ul>
 					</footer>
