--- a/officers.html
+++ b/officers.html
@@ -23,8 +23,6 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="http://tac.jessicahu.me/about">About</a></li>
-                            <li><a href="http://tac.jessicahu.me/signup">Sign up</a></li>
-							<li><a href="http://tac.jessicahu.me/schedule">Schedule</a></li>
                             <li class="current"><a href="http://tac.jessicahu.me/officers">Officers</a></li>
 						</ul>
 					</nav>
@@ -108,7 +106,7 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="https://www.facebook.com/groups/107239992697514/" class="button special">facebook page</a></li>
+							<li><a href="https://www.facebook.com/groups/107239992697514/" class="button special" target="_blank">facebook page</a></li>
 							<li><a href="#" class="button">mailing list</a></li>
 						</ul>
 					</footer>
