--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 										<image class="icon featured" src="images/trophy.png" style="height:70px; width:70px; margin:auto"></image>
                                         <br>
 								    <h3><strong>Tournaments</strong></h3>
-										<p>We host three tournaments every semester: a <strong>singles</strong>, <strong>doubles</strong>, and <strong>team</strong> tournament, all included in member dues. Follow our <a>Facebook page</a> for more info about signups!</p>
+										<p>We host a <strong>singles</strong>, <strong>doubles</strong>, and <strong>team</strong> tournament every semester, all included in member dues. Follow our <a href="https://www.facebook.com/tennisatcal/" target="_blank">Facebook page</a> for more info about signups, and click <a href="#">here</a> for a list of past winners.</p>
 									</section>
 
 								</div>
@@ -114,7 +114,7 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="https://www.facebook.com/groups/107239992697514/" class="button special" target="_blank">facebook page</a></li>
+							<li><a href="https://www.facebook.com/tennisatcal/" class="button special" target="_blank">facebook page</a></li>
 							<li><a href="#" class="button">mailing list</a></li>
 						</ul>
 					</footer>
