--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="https://www.facebook.com/groups/107239992697514/" class="button special" target="_blank">facebook page</a></li>
+							<li><a href="https://www.facebook.com/tennisatcal/" class="button special" target="_blank">facebook page</a></li>
 							<li><a href="#" class="button">mailing list</a></li>
 						</ul>
 					</footer>
