--- a/officers.html
+++ b/officers.html
@@ -177,7 +177,7 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="https://www.facebook.com/groups/107239992697514/" class="button special" target="_blank">facebook page</a></li>
+							<li><a href="https://www.facebook.com/tennisatcal/" class="button special" target="_blank">facebook page</a></li>
 							<li><a href="#" class="button">mailing list</a></li>
 						</ul>
 					</footer>
