--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         <br>
 						<h2>Welcome to the homepage for Tennis at Cal.</h2>
 						<p>
-                            Here, you'll find information regarding the <strong>practices</strong>, <strong>socials</strong>, and <strong>tournaments</strong> that we host year-round. To learn more about our practice schedule and tournaments, check the <a>About</a> page.
+                            Here, you'll find information regarding the <strong>practices</strong>, <strong>socials</strong>, and <strong>tournaments</strong> that we host year-round. To learn more about our practice schedule and tournaments, check the <a href="http://tac.jessicahu.me/about">About</a> page.
                         </p>
                         <p>
-                            For the most up-to-date announcements, follow us on <a>Facebook</a>. Hope to see you on the courts!
+                            For the most up-to-date announcements, follow us on <a href="https://www.facebook.com/tennisatcal/" target="_blank">Facebook</a>. Hope to see you on the courts!
                         </p>
                     </section>
                     <br>
