--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Home</a></h1>
+					<h1 id="logo"><a href="http://tac.jessicahu.me">Home</a></h1>
 					<nav id="nav">
 						<ul>
                             <li><a href="http://tac.jessicahu.me/about">About</a></li>
