delete unnecessary pictures, update open practice dates

--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
                     <section class="container">
                         <br>
 						<h2><strong>Schedule</strong></h2>
-						<p>Check back later for an updated calendar of practices, tournaments, and socials.</p>
+						<p>Welcome back bears! We'll be holding our first four <b>open practices</b> (no membership dues required) on the following dates: <br>
+                            &emsp; - <b>Saturday 9/2, 2-4 PM</b> <br>
+                            &emsp; - <b>Monday 9/4, 7-9PM</b> <br>
+                            &emsp; - <b>Wednesday 9/6, 7-9PM</b> <br>
+                            &emsp; - <b>Saturday 9/9, 2-4PM</b>
+                        </p>
                     </section>
             </article>
 
@@ -85,8 +90,8 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="https://www.facebook.com/tennisatcal/" class="button special" target="_blank">facebook page</a></li>
-							<li><a href="#" class="button">mailing list</a></li>
+							<li><a href="https://www.facebook.com/tennisatcal/" class="button special" target="_blank">follow our facebook page</a></li>
+							<li><a href="https://goo.gl/forms/02L2I44mXNbaQFpr2" class="button">Join our mailing list</a></li>
 						</ul>
 					</footer>
 
