--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="http://tac.jessicahu.me">Home</a></h1>
+					<h1 id="logo"><a href="http://tennisatcal.com">Home</a></h1>
 					<nav id="nav">
 						<ul>
-                            <li><a href="http://tac.jessicahu.me/about">About</a></li>
-                            <li><a href="http://tac.jessicahu.me/officers">Officers</a></li>
+                            <li><a href="http://tennisatcal.com/about">About</a></li>
+                            <li><a href="http://tennisatcal.com/officers">Officers</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -59,10 +59,10 @@
                         <br>
 						<h2>Welcome to the homepage for Tennis at Cal.</h2>
 						<p>
-                            Here, you'll find information regarding the <strong>practices</strong>, <strong>socials</strong>, and <strong>tournaments</strong> that we host year-round. To learn more about our practice schedule and tournaments, check the <a href="http://tac.jessicahu.me/about">About</a> page.
+                            Here, you'll find information regarding the <strong>practices</strong>, <strong>socials</strong>, and <strong>tournaments</strong> that we host year-round. To learn more about our practice schedule and tournaments, check the <a href="http://tennisatcal.com/about">About</a> page.
                         </p>
                         <p>
-                            For the most up-to-date announcements, follow us on <a href="https://www.facebook.com/tennisatcal/" target="_blank">Facebook</a>. Hope to see you on the courts!
+                            For the most up-to-date announcements, follow us on <a href="https://www.facebook.com/tennisatcal/" target="_blank">Facebook</a>. You can also fill out the membership form <a href="https://goo.gl/forms/IbabKxONeNOakuMt2">here</a>. Hope to see you on the courts!
                         </p>
                     </section>
                     <br>
