fix link to google drive

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             Here, you'll find information regarding the <strong>practices</strong>, <strong>socials</strong>, and <strong>tournaments</strong> that we host year-round. To learn more about our practice schedule and tournaments, check the <a href="http://tennisatcal.com/about">About</a> page.
                         </p>
                         <p>
-                            For the most up-to-date announcements, follow us on <a href="https://www.facebook.com/tennisatcal/" target="_blank">Facebook</a>. You can also fill out the membership form <a href="https://goo.gl/forms/IbabKxONeNOakuMt2">here</a>. Hope to see you on the courts!
+                            For the most up-to-date announcements, follow us on <a href="https://www.facebook.com/tennisatcal/" target="_blank">Facebook</a>. You can also fill out the membership form <a href="//tinyurl.com/tacfall2017" target="_blank">here</a>. Hope to see you on the courts!
                         </p>
                     </section>
                     <br>
