fix nav bar broken links LOL

--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="http://tac.jessicahu.me">Home</a></h1>
+					<h1 id="logo"><a href="http://tennisatcal.com">Home</a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="http://tac.jessicahu.me/about">About</a></li>
-                            <li><a href="http://tac.jessicahu.me/officers">Officers</a></li>
+                            <li><a href="http://tennisatcal.com/about">About</a></li>
+                            <li><a href="http://tennisatcal.com/officers">Officers</a></li>
 						</ul>
 					</nav>
 				</header>
