fix mailing list link

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 					<footer>
 						<ul class="buttons">
 							<li><a href="https://www.facebook.com/tennisatcal/" class="button special" target="_blank">facebook page</a></li>
-							<li><a href="#" class="button">mailing list</a></li>
+							<li><a href="https://goo.gl/forms/02L2I44mXNbaQFpr2" class="button">mailing list</a></li>
 						</ul>
 					</footer>
 
