new Spring 2018 changes

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 						<br />
                             <strong>Mon/Wed</strong> 7:00-9:00pm
 						<br />
-                            <strong>Sat</strong> 2:30-4:30pm
+                            <strong>Sat</strong> 2:00-4:00pm
 					</div>
 
 				</section>
@@ -126,7 +126,7 @@
 					<ul class="copyright">
 						<li>&copy; Tennis at Cal</li>
                         <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                        <li>Maintained by: <a href="http://jessicahu.me">Jessica Hu</a></li>
+                        <li>Maintained by: Winnie Zhang</li>
 					</ul>
 
 				</footer>
