--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<br />
                             <strong>Mon/Wed</strong> 7:00-9:00pm
 						<br />
-                            <strong>Sat</strong> 2:30-4:30pm
+                            <strong>Sat</strong> 2:00-4:00pm
 					</div>
 
 				</section>
@@ -71,11 +71,10 @@
                     <section class="container">
                         <br>
 						<h2><strong>Schedule</strong></h2>
-						<p>Welcome back bears! We'll be holding our first four <b>open practices</b> (no membership dues required) on the following dates: <br>
-                            &emsp; - <b>Saturday 9/2, 2-4 PM</b> <br>
-                            &emsp; - <b>Monday 9/4, 7-9PM</b> <br>
-                            &emsp; - <b>Wednesday 9/6, 7-9PM</b> <br>
-                            &emsp; - <b>Saturday 9/9, 2-4PM</b>
+						<p>I hope everyone had fun at our Valetine's Day Social: BYOB (Bring Your Own Bae)!~	
+							Pictures can be found in <a href="https://www.facebook.com/groups/107239992697514/" target="_blank">facebook group</a>
+						<p>Next up, we are having our <b>singles</b> tournament on <b>Saturday, March 3rd!</b>
+							Go sign up with this <a href="https://docs.google.com/forms/d/e/1FAIpQLScfc_5VnMwDUWamZUBnDRTqlm1fv1T_PS7hu_81BeAHLp7fvA/viewform" target="_blank">link</a>!
                         </p>
                     </section>
             </article>
@@ -102,7 +101,7 @@
 					<ul class="copyright">
 						<li>&copy; Tennis at Cal</li>
                         <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                        <li>Maintained by: <a href="http://jessicahu.me">Jessica Hu</a></li>
+                        <li>Maintained by: Winnie Zhang</a></li>
 					</ul>
 
 				</footer>
