--- a/officers.html
+++ b/officers.html
@@ -29,7 +29,7 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner" style="background-image:url('./images/officer_banner.jpg');">
+				<section id="banner" style="background-image:url('./images/retreat_2018.jpg');">
 
 					<div class="inner">
 
@@ -40,7 +40,7 @@
                             <br>
                             <strong>Mon/Wed</strong> 7:00-9:00pm
 						<br>
-                            <strong>Sat</strong> 2:30-4:30pm
+                            <strong>Sat</strong> 2:00-4:00pm
 					</div>
 
 				</section>
@@ -58,9 +58,9 @@
 							<div class="row">
 								<div class="4u 12u(narrower)">
 									<section>
-										<image src="images/officers/jj.jpg" style="height:250px; width:250px; margin:auto"></image>
+										<image src="images/officers/kelly.jpg" style="height:250px; width:250px; margin:auto"></image>
                                         <br>
-                                    <p style="text-align:center"><strong>JJ SAHABU</strong> <br>
+                                    <p style="text-align:center"><strong>KELLY CHU</strong> <br>
                                         Co-President</p>
 									</section>
 								</div>
@@ -86,25 +86,25 @@
                         <div class="row">
 								<div class="4u 12u(narrower)">
 									<section>
-										<image src="images/officers/kelly.jpg" style="height:250px; width:250px; margin:auto"></image>
+										<image src="images/officers/sarah.jpg" style="height:250px; width:250px; margin:auto"></image>
                                         <br>
-                                    <p style="text-align:center;"><strong>KELLY CHU</strong> <br>
+                                    <p style="text-align:center;"><strong>SARAH MALONE</strong> <br>
                                         External VP</p>
 									</section>
 								</div>
 								<div class="4u 12u(narrower)">
 									<section>
-										<image src="images/officers/alex.jpg" style="height:250px; width:250px; margin:auto"></image>
+										<image src="images/officers/david.jpg" style="height:250px; width:250px; margin:auto"></image>
                                         <br>
-                                    <p style="text-align:center;"><strong>ALEX FRENKEL</strong> <br>
-                                        Co-Treasurer</p>
+                                    <p style="text-align:center;"><strong>DAVID KWON</strong> <br>
+                                        Treasurer</p>
 									</section>
 								</div><div class="4u 12u(narrower)">
 									<section>
-										<image src="images/officers/joanne.jpg" style="height:250px; width:250px; margin:auto"></image>
+										<image src="images/officers/abi.jpg" style="height:250px; width:250px; margin:auto"></image>
                                         <br>
-                                    <p style="text-align:center;"><strong>JOANNE GONG</strong> <br>
-                                        Co-Treasurer</p>
+                                    <p style="text-align:center;"><strong>ABISHEK CHOZHAN</strong> <br>
+                                        Secretary</p>
 									</section>
 								</div>
 							</div>
@@ -114,25 +114,25 @@
                         <div class="row">
 								<div class="4u 12u(narrower)">
 									<section>
-										<image src="images/officers/sarah.jpg" style="height:250px; width:250px; margin:auto"></image>
-                                        <br>
-                                    <p style="text-align:center;"><strong>SARAH MALONE</strong> <br>
-                                        Secretary</p>
-                                    </section>
-								</div>
-								<div class="4u 12u(narrower)">
-									<section>
-										<image src="images/officers/edward.jpg" style="height:250px; width:250px; margin:auto"></image>
-                                        <br>
-                                    <p style="text-align:center;"><strong>EDWARD RAMIREZ</strong> <br>
-                                        Co-Tournament Director</p>
-									</section>
-								</div><div class="4u 12u(narrower)">
-									<section>
 										<image src="images/officers/joe.jpg" style="height:250px; width:250px; margin:auto"></image>
                                         <br>
                                     <p style="text-align:center;"><strong>JOE JOHNSTON</strong> <br>
                                         Co-Tournament Director</p>
+                                    </section>
+								</div>
+								<div class="4u 12u(narrower)">
+									<section>
+										<image src="images/officers/shrey.jpg" style="height:250px; width:250px; margin:auto"></image>
+                                        <br>
+                                    <p style="text-align:center;"><strong>SHREY SARETHA</strong> <br>
+                                        Co-Tournament Director</p>
+									</section>
+								</div><div class="4u 12u(narrower)">
+									<section>
+										<image src="images/officers/winnie.jpg" style="height:250px; width:250px; margin:auto"></image>
+                                        <br>
+                                    <p style="text-align:center;"><strong>WINNIE ZHANG</strong> <br>
+                                        Historian and Webmaster</p>
 									</section>
 								</div>
 							</div>
@@ -141,25 +141,18 @@
                         <div class="row">
 								<div class="4u 12u(narrower)">
 									<section>
-										<image src="images/officers/brian.jpg" style="height:250px; width:250px; margin:auto"></image>
+										<image src="images/officers/edward.jpg" style="height:250px; width:250px; margin:auto"></image>
                                         <br>
-                                    <p style="text-align:center;"><strong>BRIAN HUNG</strong> <br>
+                                    <p style="text-align:center;"><strong>EDWARD RANIREZ</strong> <br>
                                         Co-Social Chair</p>
 									</section>
 								</div>
 								<div class="4u 12u(narrower)">
 									<section>
-										<image src="images/officers/shrey.jpg" style="height:250px; width:250px; margin:auto"></image>
+										<image src="images/officers/john.jpg" style="height:250px; width:250px; margin:auto"></image>
                                         <br>
-                                    <p style="text-align:center;"><strong>SHREY SARETHA</strong> <br>
+                                    <p style="text-align:center;"><strong>JOHN LEE</strong> <br>
                                         Co-Social Chair</p>
-									</section>
-								</div><div class="4u 12u(narrower)">
-									<section>
-										<image src="images/officers/jessica.jpg" style="height:250px; width:250px; margin:auto"></image>
-                                        <br>
-                                    <p style="text-align:center;"><strong>JESSICA HU</strong> <br>
-                                        Co-Tournament Director</p>
 									</section>
 								</div>
 							</div>
@@ -187,7 +180,7 @@
 					<ul class="copyright">
 						<li>&copy; Tennis at Cal</li>
                         <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                        <li>Maintained by: <a href="http://jessicahu.me">Jessica Hu</a></li>
+                        <li>Maintained by: Winnie Zhang</a></li>
 					</ul>
 
 				</footer>
