--- a/officers.html
+++ b/officers.html
@@ -29,7 +29,7 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner" style="background-image:url('./images/retreat_2018.JPG');">
+				<section id="banner" style="background-image:url('./images/retreat_2018.jpg');">
 
 					<div class="inner">
 
