--- a/officers.html
+++ b/officers.html
@@ -29,7 +29,7 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner" style="background-image:url('./images/retreat_2018.jpg');">
+				<section id="banner" style="background-image:url('./images/retreat_2018.JPG');">
 
 					<div class="inner">
 
@@ -149,7 +149,7 @@
 								</div>
 								<div class="4u 12u(narrower)">
 									<section>
-										<image src="images/officers/john.jpg" style="height:250px; width:250px; margin:auto"></image>
+										<image src="images/officers/john.JPG" style="height:250px; width:250px; margin:auto"></image>
                                         <br>
                                     <p style="text-align:center;"><strong>JOHN LEE</strong> <br>
                                         Co-Social Chair</p>
