--- a/officers.html
+++ b/officers.html
@@ -48,7 +48,7 @@
 			<!-- Main -->
 				<article id="main">
 					<section class="special container">
-                        <h2>Introducing your officers for <strong>fall 2017</strong>:</h2>
+                        <h2>Introducing your officers for <strong>spring 2018</strong>:</h2>
                     </section>
 
 					<!-- Two -->
