--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
                     <section class="container">
                         <br>
 						<h2><strong>Schedule</strong></h2>
-						<p>I hope everyone had fun at our Valetine's Day Social: BYOB (Bring Your Own Bae)!~	
-							Pictures can be found in <a href="https://www.facebook.com/groups/107239992697514/" target="_blank">facebook group</a>
-						<p>Next up, we are having our <b>singles</b> tournament on <b>Saturday, March 3rd!</b>
-							Go sign up with this <a href="https://docs.google.com/forms/d/e/1FAIpQLScfc_5VnMwDUWamZUBnDRTqlm1fv1T_PS7hu_81BeAHLp7fvA/viewform" target="_blank">link</a>!
+						<p>I hope everyone had fun at our singles tournament!~ Pictures can be found in our <a href="https://www.facebook.com/groups/107239992697514/" target="_blank">facebook group</a></p>
+						<p>Next up, we are having our <b>doubles</b> tournament on <b>Saturday, April 7th!</b>
+							Go sign up with this <a href="https://docs.google.com/forms/d/e/1FAIpQLSco_gm_r10VlAw0kNPvM6bpGMCD4h9rxw0Dg2GoFrIqpnu68A/viewform" target="_blank">link</a>!
                         </p>
                     </section>
             </article>
