--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <section class="container">
                         <br>
 						<h2><strong>Schedule</strong></h2>
-						<p>I hope everyone had fun at our singles tournament!~ Pictures can be found in our <a href="https://www.facebook.com/groups/107239992697514/" target="_blank">facebook group~</a></p>
+						<p>I hope everyone had fun at our singles tournament!~ Pictures can be found in our <a href="https://www.facebook.com/groups/107239992697514/" target="_blank">facebook group</a>~</p>
 						<p>Next up, we are having our <b>doubles</b> tournament on <b>Saturday, April 7th!</b>
 							Go sign up with this <a href="https://docs.google.com/forms/d/e/1FAIpQLSco_gm_r10VlAw0kNPvM6bpGMCD4h9rxw0Dg2GoFrIqpnu68A/viewform" target="_blank">link</a>!
                         </p>
